test/1.2/errors/T_EAINCOMP.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

bank b0 {
    parameter register_size = 4;
    /// ERROR EAINCOMP
    register r0[i in 0..1];
    /// ERROR EAINCOMP
    register r0[j in 0..1];
}

bank b1 {
    /// ERROR EAINCOMP
    register r1[i in 0..1];
    /// ERROR EAINCOMP
    register r1[i in 0..2];
}

bank b2 {
    /// ERROR EAINCOMP
    register r2[2];
    /// ERROR EAINCOMP
    register r2;
}
